# transcendence

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  COLLECTE_TEMPLATE.txt  Dockerfile  FIX_CARGO.md  GAME_DEV_LEARNING_PLAN.md  GAME_STREAM_REFACTOR_PLAN.md  IMPLEMENTATION_COMPLETE.md  Makefile  QUICK_REFERENCE.md  README.md  ROTATION_PATCH_SUGGESTED.hpp  ROTATION_SUPPORT_PROPOSAL.md  WEBTRANSPORT_QUICKSTART.md  colider  colliders.json  colliders_with_rotation.json  data_colision.txt  data_colision_calculs.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  docker.config.toml  entrypoint.sh  game_audio_introduction.md  gemini.md  package-lock.json  prek.toml  process_colliders.py  prod_config.toml.example  transcendence.txt
.claude/: settings.json
.claude/hooks/: frontend-check.sh  frontend-test.sh
.claude/skills/: backend-testing.skill
.github/: dependabot.yml
.github/workflows/: docker-publish-debug.yml  docker-publish.yml  pre-commit.yml
backend/: .gitignore  Cargo.toml  README.md  WHEN_CHANGING_MIGRATIONS_READ_THIS.md  build.rs  config.toml  prod_config.toml  test_cpp_build.sh
backend/assets/: animated.avif  default_avatar_large.avif  default_avatar_small.avif
backend/data/: .gitignore  diesel.sqlite  diesel.sqlite-shm
backend/docs/: friends.md
backend/game/include/: game_session.hpp
backend/game/src/: game_session.cc
backend/migrations/: README.md
backend/migrations/2026-01-07-215917-0000_create_user_achievements/: up.sql
backend/migrations/2026-01-18-160846-0000_create_chat/: down.sql  up.sql
backend/migrations/2026-01-23-193415-0000_create_avatars_large/: down.sql  up.sql
backend/migrations/2026-01-23-193428-0000_create_avatars_small/: down.sql  up.sql
backend/migrations/2026-01-27-083942-0000_create_friend_requests/: up.sql
backend/migrations/2026-02-04-000000-0000_create_achievements/: up.sql
backend/migrations/2026-02-04-100000-0000_create_daily_challenges/: down.sql  up.sql
backend/migrations/2026-02-13-162014-0000_create_notifications/: up.sql
backend/migrations/2026-03-05-000000-0000_create_games/: up.sql
backend/migrations/2026-03-13-000000-0000_add_game_mode/: down.sql  up.sql
backend/migrations/2026-04-04-190018-0000_create_user_stats/: up.sql
backend/migrations/2026-04-12-000000-0000_add_user_stats_combat_totals/: down.sql  up.sql
backend/scripts/: dev-cert.sh  run_migrations_update_schema.sh
backend/src/: db.rs  error.rs  game_ffi.rs  main.rs  models.rs  prelude.rs  routers.rs  schema.patch  schema.rs  tos.rs  validate.rs
backend/src/auth/: delete_account.rs  export_data.rs  gdpr_common.rs  hoops.rs  mod.rs  router.rs  session_token.rs  two_factor.rs  user.rs  util.rs
backend/src/auth/tests/: delete_account.rs  description.rs  export_data.rs  login.rs  logout.rs  me.rs  mod.rs  password.rs  register.rs  session.rs  sessions.rs  tos.rs  two_factor.rs
backend/src/avatar/: cache.rs  mod.rs  router.rs  validate.rs
backend/src/chat/: mod.rs  stream.rs
backend/src/config/: log_config.rs  mod.rs
backend/src/db/: mod.rs  sqlite.rs
backend/src/email/: confirm.rs  mock.rs  smtp.rs
backend/src/email/tests/: confirm.rs  mod.rs  render.rs
backend/src/friends/: accept.rs  cancel.rs  incoming.rs  list.rs  mod.rs  outgoing.rs  reject.rs  remove.rs  send.rs  types.rs
backend/src/friends/tests/: accept.rs  cancel.rs  incoming.rs  list.rs  mod.rs  outgoing.rs  reject.rs  remove.rs  send.rs
backend/src/game/: REFACTORING_SUMMARY.md  STREAM_FLOW_ANALYSIS.md  ffi.rs  game.rs  lobby.rs  lobby_messages.rs  manager.rs  messages.rs  mod.rs  router.rs  stream_handler.rs
backend/src/games/: mod.rs  router.rs
backend/src/games/tests/: mod.rs  record_game.rs
backend/src/gamification/: achievements.rs  daily_challenges.rs  mod.rs  router.rs  xp.rs
backend/src/gamification/tests/: stats.rs
backend/src/models/: blob.rs  cbor_blob.rs  chatname.rs  i32_enum.rs  nickname.rs  ulid.rs
backend/src/notifications/: manager.rs  mod.rs
backend/src/routers/: friends.rs  game.rs  users.rs
backend/src/stream/: cancel.rs  compress_cbor_codec.rs  compress_flatbuffers_codec.rs  compress_flexbuffers_codec.rs  echo_example.rs  mod.rs  notifications.rs  room_registry.rs  sink.rs  stream_group.rs  stream_manager.rs  stream_room.rs  user_stream.rs
backend/src/stream/tests/: cancel.rs  mod.rs  receive_loop.rs  room.rs  room_registry.rs  sink.rs  stream_api.rs  test_utils.rs  user_stream.rs
backend/src/utils/: adaptive_buffer.rs  crash_handler.rs  limiter.rs  logger.rs  mem_cache.rs  mod.rs  nick_cache.rs  shrinkable.rs
backend/src/utils/mock/: api_client.rs  generators.rs  mod.rs  server.rs  user.rs
docs/: API.md  ARCHITECTURE.md  achievement.md  audio_engine.md  audio_system.md  avatar-backend.md  avatar.md  chat-challenges.md  chat-implementation.md  friends-system.md  frontend-2fa.md  frontend-stream-integration.md  frontend.md  game-architecture-overview.md  game-communication.md  game-end-modal.md  game-frontend.md  game-presentation.md  game-server-ecs.md  game.md  gamification.md  general.md  infos.md  notification-system.md  profil_user.md  questions.md  session-management.md  spectator-mode.md  streaming-architecture.md  todo.md  typescript.md  wire-protocol.md  xpSysteme.md
docs/how-to/: add-notification-payload.md  add-streamtype.md  database-and-models.md  salvo-routes-advanced.md
docs/recent-questions/: assets-vs-public.md  audio-system.md
docs/schemas/: character-preset.v1.json
frontend/: .gitignore  .prettierignore  .prettierrc  eslint.config.js  gemini.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/coverage/: coverage-final.json  index.html
frontend/public/: devscene.html  robots.txt  sitemap.xml
frontend/src/: App.tsx  AppRoutes.tsx  (+5 more)
game-core/: ARCHITECTURE.md  ECS_ARCHITECTURE.md  INTEGRATION_CHECKLIST.md  QUICK_START.md  README.md
game_engine/: ECS_ARCHITECTURE.md  INTEGRATION_GUIDE.md  README.md  server.md
tools/: List_name.txt  README.md  name_forge.py
(+452 files in other folders)
